@@ -107,18 +107,18 @@ function workflow_schema() {
         'translatable' => TRUE,
       ),
       'status' => array(
-        'type' => 'int', 
+        'type' => 'int',
         'not null' => TRUE,
         // Set the default to ENTITY_CUSTOM without using the constant as it is
-        // not safe to use it at this point. 
-        'default' => 0x01, 
-        'size' => 'tiny', 
+        // not safe to use it at this point.
+        'default' => 0x01,
+        'size' => 'tiny',
         'description' => 'The exportable status of the entity.',
-      ), 
+      ),
       'module' => array(
-        'description' => 'The name of the providing module if the entity has been defined in code.', 
-        'type' => 'varchar', 
-        'length' => 255, 
+        'description' => 'The name of the providing module if the entity has been defined in code.',
+        'type' => 'varchar',
+        'length' => 255,
         'not null' => FALSE,
       ),
       'tab_roles' => array(
@@ -229,12 +229,20 @@ function workflow_schema() {
         'default' => 0,
         'disp-width' => '10',
       ),
+      'name' => array(
+        'description' => 'The machine-readable name of this state.',
+        'type' => 'varchar',
+        'length' => '255',
+        // 'not null' => TRUE,
+        'default' => '',
+      ),
       'state' => array(
-        'description' => 'The name of the state.',
+        'description' => 'The human-readable name of this state.',
         'type' => 'varchar',
         'length' => '255',
         'not null' => TRUE,
         'default' => '',
+        'translatable' => TRUE,
       ),
       'weight' => array(
         'description' => 'The weight (order) of the state.',
@@ -512,7 +520,7 @@ function workflow_update_7000() {
 /**
  * Initialize all workflows to show watchdog messages.
  *
- * N.B.: Moved to 7007, since this generates errors if 7007 hasn't run yet. 
+ * N.B.: Moved to 7007, since this generates errors if 7007 hasn't run yet.
  */
 //function workflow_update_7001() {
 //  // Not all module functions are available in a hook_update_N() function.
@@ -720,9 +728,8 @@ function workflow_update_7008() {
 /**
  * Add database fields to make Workflow exportable.
  *
- * Ignore the 'User warning'.
  */
-function workflow_update_7012() {
+function workflow_update_7013() {
   $schema = workflow_schema();
 
   // Update the Workflow table.
@@ -737,6 +744,7 @@ function workflow_update_7012() {
   if (!db_field_exists($table, 'module')) {
     db_add_field($table, 'module', $fields['module']);
   }
+
   // Update the ConfigTransition table.
   $table = 'workflow_transitions';
   $fields = $schema[$table]['fields'];
@@ -747,10 +755,21 @@ function workflow_update_7012() {
     db_add_field($table, 'name', $fields['name']);
   }
 
+  // Update the workflow_states table.
+  $table = 'workflow_states';
+  $fields = $schema[$table]['fields'];
+  if (!db_field_exists($table, 'name')) {
+        db_add_field($table, 'name', $fields['name']);
+  }
+
   // Load&save workflows, to populate the label.
   // Do this after all db-updates!!
   foreach (workflow_load_multiple() as $workflow) {
     $workflow->save();
+    // Load&save workflow states, to populate the state name.
+    foreach ($workflow->getStates(TRUE, TRUE) as $state) {
+      $state->save();
+    }
   }
 
   // The update system is going to flush all caches,
