@@ -539,3 +539,4 @@ Issue #2263561: Added Entity properties + tokens.
 Issue #2277751: Added Field Properties for workflow_field.
 Issue #2265615: Added Rules Action 'Set a workflow field state' for any entity.
 Issue #2277935: Fixed message 'Wrong call to constructor' when rebuilding permission with workflow_access enabled.
+Issue #2196247: Added machine_names for WorkflowStates.
